<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>amusic</groupId>
    <artifactId>autotest</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>


    <properties>
        <suiteXmlFile>src/test/resources/suiteXmlFile.xml</suiteXmlFile>
        <allure.version>2.6.0</allure.version>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
        <allure.version>2.6.0</allure.version>
    </properties>


    <dependencies>
        <!-- common utils for Java-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.7</version>
        </dependency>

        <!-- testNG as test development framework and test runner -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
        <dependency>
            <groupId>org.aeonbits.owner</groupId>
            <artifactId>owner</artifactId>
            <version>1.0.12</version>
        </dependency>

        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>

        <!-- testNG adapter for Allure reporting-->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.0.3</version>
            <scope>test</scope>
        </dependency>

        <!-- slf4j-log4j12 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.25</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.0.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--maven-compiler-plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!--maven-surefire-plugin-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20</version>
                    <configuration>
                        <testFailureIgnore>true</testFailureIgnore>
                        <!--argLine>
                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        </argLine-->
                        <argLine>-Xmx4096m -XX:MaxPermSize=4096m</argLine>
                        <suiteXmlFiles>
                            <!-- to run some xml file with suite from command line use:
                            mvn -DsuiteXmlFile=<path_to_xml_file> clean test
                            xml files with suites are placed in: src\test\resources\
                            so, for example -DsuiteXmlFile=src\test\resources\
                            -->
                            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                        </suiteXmlFiles>
                        <systemProperties>
                            <property>
                                <name>allure.results.directory</name>
                                <value>${project.build.directory}/allure-results</value>
                            </property>
                            <property>
                                <name>allure.link.tms.pattern</name>
                                <value>https://vmmreg32.testrail.net/index.php?/cases/view/{}</value>
                            </property>
                        </systemProperties>
                    </configuration>
                </plugin>

                <!--allure-maven-->
                <plugin>
                    <groupId>io.qameta.allure</groupId>
                    <artifactId>allure-maven</artifactId>
                    <version>2.10.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <!--<reportVersion>2.8.0</reportVersion>-->
                        <!--It is a work around for Allure bug: see https://github.com/allure-framework/allure2/issues/832 -->
                        <!--<allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/2.8.0/allure-2.8.0.zip</allureDownloadUrl>-->
                        <resultsDirectory>allure-results</resultsDirectory>
                        <propertiesFilePath>${basedir}/..dt_core_common/src/main/resources/allure.properties
                        </propertiesFilePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
